# aa-fleet-tool

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  codecov.yml  pyproject.toml  runtests.py  tox.ini
.github/workflows/: autotester.yml  pypi.yml  release.yml
aa_fleet_tool/: __init__.py  admin.py  app_settings.py  apps.py  auth_hooks.py  composition.py  constants.py  discord.py  models.py  providers.py  tasks.py  urls.py  views.py
aa_fleet_tool/locale/de/LC_MESSAGES/: django.mo  django.po
aa_fleet_tool/migrations/: 0001_initial.py  0002_fleetlayout.py  0003_alter_activefleet_id_alter_doctrine_id_and_more.py  0004_motdtemplate.py  0005_fleettoolconfiguration.py  0006_activefleet_name.py  0007_fleetmember_station_id.py  0008_fleetcommander_activated_at_fleetcommander_is_active.py  0009_motdtemplate_is_public.py  0010_fleetsnapshot.py  0011_fleettype_staging_activefleet_fat_link_hash_and_more.py  0012_webhook_fleettype_mention_and_more.py  0013_migrate_webhooks.py  0014_remove_fleettype_role_mention_and_more.py  0015_fleetsnapshot_in_system_booster_and_more.py
aa_fleet_tool/static/aa_fleet_tool/js/: commanders.js  common.js  doctrines.js  fleets.js  layouts.js  motd.js
aa_fleet_tool/templates/aa_fleet_tool/: base.html  commanders.html  doctrines.html  fleets.html  index.html  layouts.html  motd.html
aa_fleet_tool/templates/aa_fleet_tool/partials/: _fleet_modals.html  _member_table.html
aa_fleet_tool/templatetags/: aa_fleet_tool_tags.py
aa_fleet_tool/tests/: __init__.py  test_composition.py  test_ping.py  test_tasks.py  test_views.py
aa_fleet_tool/tests/testdata/: utils.py
aa_fleet_tool/tests/testdata/integrations/: allianceauth.json  allianceauth.py
aa_fleet_tool/views/: __init__.py  commanders.py  common.py  doctrines.py  fleets.py  integrations.py  layouts.py  motd.py  ping.py
testauth/: celery.py
testauth/settings/: local.py
